PARQUET-843: Impala is thrown off by a REPEATED root schema node

We do not use the repetition level of the root node in the schema, and neither does parquet-mr. However, Impala 2.8.0 increases the max_repetition_level and expects to find repetition levels that are not being written out. With this change, Impala is able to read our files again.

Author: Wes McKinney <wes.mckinney@twosigma.com>

Closes #227 from wesm/PARQUET-843 and squashes the following commits:

dec382a [Wes McKinney] Impala is thrown off by a REPEATED root schema node. Some uint32_t->int32_t changes

Change-Id: I330a627523c86a18c0675b3929fb51a9b14274bc