cpp/src/parquet/column/levels.cc
@@ -96,20 +96,20 @@ LevelDecoder::~LevelDecoder() {}
 
 int LevelDecoder::SetData(Encoding::type encoding, int16_t max_level,
     int num_buffered_values, const uint8_t* data) {
-  uint32_t num_bytes = 0;
+  int32_t num_bytes = 0;
   encoding_ = encoding;
   num_values_remaining_ = num_buffered_values;
   bit_width_ = BitUtil::Log2(max_level + 1);
   switch (encoding) {
     case Encoding::RLE: {
-      num_bytes = *reinterpret_cast<const uint32_t*>(data);
-      const uint8_t* decoder_data = data + sizeof(uint32_t);
+      num_bytes = *reinterpret_cast<const int32_t*>(data);
+      const uint8_t* decoder_data = data + sizeof(int32_t);
       if (!rle_decoder_) {
         rle_decoder_.reset(new RleDecoder(decoder_data, num_bytes, bit_width_));
       } else {
         rle_decoder_->Reset(decoder_data, num_bytes, bit_width_);
       }
-      return sizeof(uint32_t) + num_bytes;
+      return sizeof(int32_t) + num_bytes;
     }
     case Encoding::BIT_PACKED: {
       num_bytes = BitUtil::Ceil(num_buffered_values * bit_width_, 8);
